# construction_core-acceptance_hub

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
ai-construction-production-system/: README.md
ai-construction-production-system/docs/: MASTER_ARCHITECTURE_PLAN.md
backend/api/: main.py
backend/models/: core_models.py  drawing_models.py
backend/services/: drawing_ingestion_service.py  quantity_service.py  review_service.py  rule_service.py
data/samples/: deep_excavation_export_package.json
docs/: ARCHITECTURE.md  ARCHITECTURE_GUARDRAILS.md  BASELINE_RECOVERY_REPORT.md  COMMON_DRAWING_DATA.md  DATA_CONTRACTS.md  GLOBAL_ROADMAP.md  KNOWLEDGE_CENTER_STRATEGY.md  MASTER_ARCHITECTURE_PLAN.md  MODULE_DEPENDENCY_MAP.md  P0_1_ACCEPTANCE.md  P0_1_ACCEPTANCE_REPORT.md  P0_1_FREEZE_REPORT.md  P0_ACCEPTANCE.md  ROADMAP.md  SYSTEM_BOUNDARY.md
docs/architecture/: README.md  construction_core.md
docs/decisions/: README.md
docs/management/: dev_report_template.md  merge_decision_template.md  model_roles.md  review_report_template.md  task_template.md
docs/reports/: README.md  sample_project_group_acceptance_report.md
docs/tasks/: README.md
examples/: sample_components.json  sample_floor_plan_elements.json  sample_parsed_drawing.json  sample_quantity_request.json  sample_review_request.json
knowledge_base/rules/: concrete_volume_rule.json  formwork_area_rule.json  rebar_embed_check_rule.json
scripts/: check_all.py
tests/: test_acceptance_hub.py  test_api.py  test_construction_core_models.py  test_models.py
(+1 files in other folders)
