[project]
name = "construction-core-acceptance-hub"
version = "0.1.0"
description = "P0 core foundation for AI Construction Detailing Engine"
requires-python = ">=3.10"

dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.6",
  "pydantic==2.9.2",
  "pytest==8.3.3",
  "httpx==0.27.2"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
